[package]
name = "proxy"
version = "0.1.0"
authors = ["Inzanez <r.aggeler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
clap = "3.0.0-beta.2"
futures = "0.3.8"
futures-util = "0.3.8"
http = "0.2.1"
httparse = "1.3.4"
native-tls = "0.2.6"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
time = "0.1.38"
tokio = { version = "0.3.4", features = ["sync", "macros", "stream", "rt-multi-thread", "net", "time", "process", "io-util", "io-std"] }
tokio-native-tls = "0.2.0"
tokio-util = { version = "0.5.0", features = [ "full" ] }